# merge-yaml-hash

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile.md  README.md
src/: lib.rs  tests.rs
t/: README.md
tests/: a.yaml  b.yaml  c.yaml  integration.rs
