[package]
name = "merge-yaml-hash"
description = "YAML Hash with merge/update capabilities"
categories = ["config", "encoding", "parsing"]
version = "0.3.0"
edition = "2021"
repository = "https://github.com/qtfkwk/merge-yaml-hash"
license = "MIT"

[dependencies]
hashlink = "0.8"
yaml-rust2 = "0.8.0"
